test/files/delete-log.txt
{
  "kind": "EventList",
  "apiVersion": "audit.k8s.io/v1",
  "metadata": {},
  "items": [
    {
      "level": "RequestResponse",
      "auditID": "6a8ce377-b600-4d02-8a36-f65229e23237",
      "stage": "ResponseComplete",
      "requestURI": "/apis/crd.antrea.io/v1alpha1/namespaces/default/networkpolicies/deny-client2",
      "verb": "delete",
      "user": {
        "username": "kubernetes-admin",
        "groups": [
          "system:masters",
          "system:authenticated"
        ]
      },
      "sourceIPs": [
        "192.168.77.1"
      ],
      "userAgent": "kubectl/v1.21.1 (darwin/amd64) kubernetes/5e58841",
      "objectRef": {
        "resource": "networkpolicies",
        "namespace": "default",
        "name": "deny-client2",
        "apiGroup": "crd.antrea.io",
        "apiVersion": "v1alpha1"
      },
      "responseStatus": {
        "metadata": {},
        "status": "Success",
        "code": 200
      },
      "responseObject": {
        "kind": "Status",
        "apiVersion": "v1",
        "metadata": {},
        "status": "Success",
        "details": {
          "name": "deny-client2",
          "group": "crd.antrea.io",
          "kind": "networkpolicies",
          "uid": "ae59900b-c42e-4e59-bc66-fde59d4b9c25"
        }
      },
      "requestReceivedTimestamp": "2021-06-14T18:50:20.338515Z",
      "stageTimestamp": "2021-06-14T18:50:20.344379Z",
      "annotations": {
        "authorization.k8s.io/decision": "allow",
        "authorization.k8s.io/reason": ""
      }
    }
  ]
}
