test/files/k8s-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: busybox
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: client1
    ports:
    - protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client2
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: busybox
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: client2
    ports:
    - protocol: TCP
