test/files/rollback-log.txt
{
  "kind":"EventList",
  "apiVersion":"audit.k8s.io/v1",
  "metadata":{},
  "items":[
    {"level":"RequestResponse","auditID":"adafcde4-eb02-4e16-82d5-4e14ffcea0c0","stage":"ResponseComplete","requestURI":"/apis/networking.k8s.io/v1/namespaces/nsA/networkpolicies?fieldManager=kubectl-client-side-apply","verb":"create","user":{"username":"kubernetes-admin","groups":["system:masters","system:authenticated"]},"sourceIPs":["192.168.77.1"],"userAgent":"kubectl/v1.21.1 (darwin/amd64) kubernetes/5e58841","objectRef":{"resource":"networkpolicies","namespace":"nsA","name":"npB","apiGroup [...]
    {"level":"RequestResponse","auditID":"e436b31f-2dbc-4bc6-b57c-91494a75c67c","stage":"ResponseComplete","requestURI":"/apis/networking.k8s.io/v1/namespaces/nsA/networkpolicies/npA?fieldManager=kubectl-client-side-apply","verb":"patch","user":{"username":"kubernetes-admin","groups":["system:masters","system:authenticated"]},"sourceIPs":["192.168.77.1"],"userAgent":"kubectl/v1.21.1 (darwin/amd64) kubernetes/5e58841","objectRef":{"resource":"networkpolicies","namespace":"nsA","name":"npA","apiGr [...]
    {"level":"RequestResponse","auditID":"a49c8191-5ab3-40e3-81f8-c7c26b80326c","stage":"ResponseComplete","requestURI":"/apis/crd.antrea.io/v1alpha1/namespaces/nsA/networkpolicies/anpA","verb":"delete","user":{"username":"kubernetes-admin","groups":["system:masters","system:authenticated"]},"sourceIPs":["192.168.77.1"],"userAgent":"kubectl/v1.21.1 (darwin/amd64) kubernetes/5e58841","objectRef":{"resource":"networkpolicies","namespace":"nsA","name":"anpA","apiGroup":"crd.antrea.io","apiVersion": [...]
  ]
}
